--- a/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
@@ -14,7 +14,7 @@ Questo package descrive le componenti del \emph{front end}, scritte in JavaScrip
 \item \textbf{Package contenuti}:
 \begin{itemize}
 \item \hyperref[\nogloxy{swedesigner::client::collection}]{\nogloxy{\texttt{collection}}}\\
-Questo package descrive le classi che contengono delle collection (secondo la visione di \backbonejs). Ulteriori considerazioni sulla visione del pattern MVC sono contenute nell'appendice \ref{sec:app_creaz}.
+Questo package descrive le classi che contengono delle collection (secondo la visione di \backbonejs). 
 \item \hyperref[\nogloxy{swedesigner::client::model}]{\nogloxy{\texttt{model}}}\\
 Questo package contiene i modelli di dati usati dal client per rappresentare l'informazione manipolata dall'utente.
 \item \hyperref[\nogloxy{swedesigner::client::view}]{\nogloxy{\texttt{view}}}\\
@@ -27,18 +27,23 @@ Questo package raccoglie le classi che rappresentano i menù laterali e il \text
 \subsubsection{Informazioni generali}
 \begin{itemize}
 \item \textbf{Descrizione}\\
-Questo package descrive le classi che contengono delle collection (secondo la visione di \backbonejs). Ulteriori considerazioni sulla visione del pattern MVC sono contenute nell'appendice \ref{sec:app_creaz}.
+Questo package descrive le classi che contengono delle collection (secondo la visione di \backbonejs).
 \item \textbf{Padre}: \hyperref[\nogloxy{swedesigner::client}]{\nogloxy{\texttt{client}}}
 \end{itemize}
 
 \subsection{\nogloxy{swedesigner::client::model}}
 \label{\nogloxy{swedesigner::client::model}}
 \subsubsection{Informazioni generali}
-\begin{figure}[h]
+\begin{adjustwidth}{-3cm}{-3cm}
+
+\begin{figure}[H]
 \centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/model_pkg.png}}
+\nogloxy{\includegraphics[scale=0.5,keepaspectratio]{img/client/model_pkg.png}}
 \caption{\nogloxy{swedesigner::client::model}}
 \end{figure}
+
+\end{adjustwidth}
+
 \FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
