--- a/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
+++ b/Esterni/Piano_di_qualifica/Piano_di_qualifica_3_0_0.tex
@@ -2497,28 +2497,24 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\textbf{Metrica} & \textbf{Valore/range accettabile} & \textbf{Valore/range obiettivo} & \textbf{Valore/range effettivo} \\
 		\hline
 		Completezza & ~ & ~ & ~ \\
-		Numero di violazioni di alta importanza & 0 & 0 & $27$* \\
-		Numero di violazioni di media importanza & $[0, 5]$ & 0 & 0 \\
-		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
+		Numero di violazioni di alta importanza &0 & 0 &0 \\
+		Numero di violazioni di media importanza &0-5 & 0 & 0 \\
+		Numero di violazioni di bassa importanza &0-10 & 0 & 0 \\
 		\hline
 		Correttezza & ~ & ~ & ~ \\
-		Numero di violazioni di alta importanza & 0 & 0 & 0 \\
-		Numero di violazioni di media importanza & $[0, 5]$ & 0 & 0 \\
-		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
+		Numero di violazioni di alta importanza &0 & 0 & 3 \\
+		Numero di violazioni di media importanza &0-5 & 0 & 0 \\
+		Numero di violazioni di bassa importanza &0-10 & 0 & 0 \\
 		\hline
 		Stile & ~ & ~ & ~ \\
-		Numero di violazioni di alta importanza & 0 & 0 & 0 \\
-		Numero di violazioni di media importanza & $[0, 5]$ & 0 & $13$** \\
-		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
+		Numero di violazioni di alta importanza &0 & 0 & 0 \\
+		Numero di violazioni di media importanza &0-5 & 0 & 3 \\
+		Numero di violazioni di bassa importanza &0-10 & 0 & 0 \\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo delle metriche relative alla progettazione}
 		\end{table}
 		
-		* l'alto valore del numero di violazioni di alta importanza relative alla completezza è dovuto al fatto che SDMetrics indica come non usate le classi che nell'attuale diagramma dei package implementano interfacce o classi astratte e che quindi a differenza della loro superclasse diretta non sono esplicitamente coinvolte in alcun tipo di associazione di dipendenza o riferimento.
-		
-		** l'alto valore del numero di violazione di media importanza relative allo stile è dovuto al fatto che nel server in alcune occasioni viene violato lo Stable-Dependencies Principle perchè alcuni package dipendono da altri package contenenti una singola classe concreta. Basta quindi che i primi abbiano una singola interfaccia affinchè la violazione venga segnalata.
-
 		\subsubsection{Verifica della qualità dell'architettura}
 		Per verificare l'osservanza degli obiettivi riguardanti la qualità dell'architettura prodotta, sono stati calcolati i valori delle metriche relative ai diagrammi dei package.
 		
@@ -2628,24 +2624,6 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		Classi client &0 - 4 &1 - 2 &min 0 max 2*\\
 		Classi server &0 - 4 &1 - 2 &min 0 max 1*\\
 		\hline
-		Numero violazioni della completezza architetturale di alta importanza &0 &0 &0\\
-		\hline
-		Numero violazioni della completezza architetturale di media importanza &0-5 &0 &0\\
-		\hline
-		Numero violazioni della completezza architetturale di bassa importanza &0-10 &0 &0\\
-		\hline
-		Numero violazioni della correttezza architetturale di alta importanza &0 &0 &3\\
-		\hline
-		Numero violazioni della correttezza architetturale di media importanza &0-5 &0 &0\\
-		\hline
-		Numero violazioni della correttezza architetturale di bassa importanza &0-10 &0 &0\\
-		\hline
-		Numero violazioni dello stile architetturale di alta importanza &0 &0 &0\\
-		\hline
-		Numero violazioni dello stile architetturale di media importanza &0-5 &0 &3\\
-		\hline
-		Numero violazioni dello stile architetturale di bassa importanza &0-10 &0 &0\\
-		\hline
 		\textbf{Profondità della gerarchia} & & &\\
 		Classi client &0-4 &0 &min0 max2*\\
 		Classi server &0-4 &0 &min0 max1*\\
@@ -2658,9 +2636,9 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 	
 	*** l'unico package contenente un numero di tipi al di fuori del range di accettazione è il package client.model.
 	
-		\subsection{System Qualification Testing Process \& Software Qualification Testing Process}
-		Per verificare l'osservanza degli obiettivi di qualità riguardanti la produzione di unità software eseguibili, sono stati calcolati i valori delle seguenti metriche.
-		
+	\subsubsection{Verifica Software Construction Process}	
+	Per verificare il rispetto degli obiettivi di qualità stabiliti per tale processo, abbiamo misurato le metriche riportate nella seguente tabella.
+	
 \begin{center}
 \begin{tabular}{| p{6cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} |}
 	\hline
@@ -2675,7 +2653,97 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		
 	
 		\subsubsection{Verifica della qualità del software}
-		Per verificare l'osservanza degli obiettivi riguardanti la qualità dell'architettura prodotta, sono stati calcolati i valori delle metriche relative ai diagrammi dei package
+		Per verificare l'osservanza degli obiettivi riguardanti la qualità del software prodotto, sono stati calcolati i valori delle metriche relative al linguaggio Java utilizzato nel back-end.
+		
+		I risultati ottenuti sono elencati nella seguente tabella:
+		\begin{longtable}{|p{5.5cm}|p{2.25cm}|p{2.25cm}|p{2.25cm}|}
+		\hline
+		\textbf{Metrica} &\textbf{Valore/range accettabile}	&\textbf{Valore/range obiettivo}	&\textbf{Valore/range effettivo}\\
+		\hline
+		\textbf{Complessita ciclomatica per metodo} &0-8 &0-10 &min1 max20***\\
+		\hline
+		\textbf{Grado di accoppiamento afferente per package} & & &\\
+		server.controller &0-7 &0-39 &4\\
+		server.parser  &0-7 &0-39 &1\\
+		server.generator.java  &0-7 &0-39 &1\\
+		server.generator &0-7 &0-39 &2\\
+		server.stereotype  &0-7 &0-39 &1\\
+		server.project  &0-7 &0-39 &4\\
+		server.template.java  &0-7 &0-39 &1\\
+		server.template  &0-7 &0-39 &14\\
+		server.compiler.java  &0-7 &0-39 &1\\
+		server.compiler  &0-7 &0-39 &1\\
+		server.utility  &0-7 &0-39 &1\\
+		\hline
+		\textbf{Grado di accoppiamento efferente per package} & & &\\
+		server.controller &0-6 &0-16 &6\\
+		server.parser &0-6 &0-16 &10\\
+		server.generator.java &0-6 &0-16 &3\\
+		server.generator &0-6 &0-16 &5\\
+		server.stereotype &0-6 &0-16 &2\\
+		server.project &0-6 &0-16 &10\\
+		server.template.java &0-6 &0-16 &2\\
+		server.template &0-6 &0-16 &3\\
+		server.compiler.java &0-6 &0-16 &2\\
+		server.compiler &0-6 &0-16 &4\\
+		server.utility &0-6 &0-16 &1\\
+		\hline
+		\textbf{Instabilità} & & &\\
+		server.controller &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &1\\
+		server.parser &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &1\\
+		server.generator.java &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &0.25\\
+		server.generator &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &0.20\\
+		server.stereotype &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &1\\
+		server.project &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &0.43\\
+		server.template.java &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &0.07\\
+		server.template &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &1\\
+		server.compiler.java &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &0.33\\
+		server.compiler &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &0.20\\
+		server.utility &0.0-0.3,0.7-1.0 &0.0-0.4,0.6-1.0 &0.33\\
+		\hline
+		\textbf{Numero di campi dati per classe} &0-10 &0-20 &min1 max7*\\
+		\hline
+		\textbf{Numero di figli diretti} &0 - 4 &0 - 2 &min0 max8* **\\
+		\hline
+		\textbf{Numero di metodi per classe} &0-10 &0-20 &min1 max11*\\
+		\hline
+		\textbf{Numero di tipi per package} & & &\\
+		server.controller &0-20 &0-30 &1\\
+		server.parser &0-20 &0-30 &1\\
+		server.generator.java &0-20 &0-30 &1\\
+		server.generator &0-20 &0-30 &1\\
+		server.stereotype &0-20 &0-30 &1\\
+		server.project &0-20 &0-30 &16\\
+		server.template.java &0-20 &0-30 &1\\
+		server.template &0-20 &0-30 &1\\
+		server.compiler.java &0-20 &0-30 &2\\
+		server.compiler &0-20 &0-30 &1\\
+		server.utility &0-20 &0-30 &1\\
+		\hline
+		\textbf{Profondità della gerarchia} &0 - 4 &1 - 2 &min1 max4*\\
+		&0 &0 &0\\
+		\hline
+		\textbf{Numero di linee di codice per metodo} &0-20 &0-40 &min1 max66****\\
+		\hline
+		\textbf{Numero di parametri per metodo} &0-4 &0-8 &min1 max6\\
+		\hline
+		\textbf{Percentuale linee di commento su linee di codice} &20-40 &20-40 &11\\
+		\hline
+		
+		\caption{Esiti del calcolo delle metriche relative all'architettura}
+		\end{longtable}
+	* abbiamo deciso di specificare solamente i valori massimi e minimi della metrica per evitare di creare tabelle troppo prolisse e poco leggibili, a fronte di un contenuto equivalente a quello proposto.
+	
+	** le uniche due classi che hanno un numero di figli diretti al di fuori del range d'accettazione sono le classi ActivityDiagramElement e ParsedInstruction.
+	
+	*** i metodi che presentano una complessità cicolomatica al di fuori del valore accettabile sono relBuilder, typeBuilder, recursiveBuilder e createActivity.
+	
+	**** la classe che presenta metodi con una lunghezza superiore a quella accettabile è la classe Parser.
+	
+	
+	\subsection{System Qualification Testing Process \& Software Qualification Testing Process}
+		Per verificare l'osservanza degli obiettivi di qualità riguardanti la produzione di unità software eseguibili, sono stati calcolati i valori delle seguenti metriche.
+		
 
 
 
