--- a/Esterni/Definizione_di_prodotto/tex/componenti-BE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-BE.tex
@@ -159,6 +159,10 @@ Questo package contiene i vari controller che implementano il pattern Front Cont
 \label{\nogloxy{swedesigner::server::controller::RequestHandlerController}}
 \begin{figure}[h]
 \centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/HandleGenerationRequestSequence.png}}
+\end{figure}
+\begin{figure}[h]
+\centering
 \nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/RequestHandlerController.png}}
 \caption{\nogloxy{swedesigner::server::controller::RequestHandlerController}}
 \end{figure}
@@ -314,6 +318,22 @@ questa interfaccia si occupa di fornire un oggetto \texttt{Generator} generico a
 \subsection{\nogloxy{swedesigner::server::parser}}
 \label{\nogloxy{swedesigner::server::parser}}
 \subsubsection{Informazioni generali}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/ParserActivity.png}}
+\end{figure}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/CreazioneCorpiMetodiActivity.png}}
+\end{figure}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/CreazioneTipiActivity.png}}
+\end{figure}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/server/CreazioneRelazioniActivity.png}}
+\end{figure}
 \begin{itemize}
 \item \textbf{Descrizione}\\
 Questo package presenta le classi utili all'attività di parsing dei dati ricevuti dai client.
